--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.25",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.365.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "^14.2.35",
@@ -25,12 +26,11 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "react-lottie": "^1.2.4",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.163.0",
     "three-globe": "^2.31.0",
-    "vercel": "^50.1.6"
+    "vercel": "^25.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -38,7 +38,7 @@
     "@types/react-dom": "^18",
     "@types/react-lottie": "^1.2.10",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "eslint": "^9.39.2",
     "eslint-config-next": "^16.1.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
